# HopsMD

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  angular.json  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml  winget.yml
docs/: RELEASE.md
samples/: Markdown-Parity.md  Willkommen.md
samples/test-suite/: 00-START-HERE.md  01-Text-Formatting.md  02-Code-Highlighting.md  03-Tables-and-Tasks.md  04-Math-KaTeX.md  05-Admonitions.md  06-Emoji-and-Footnotes.md  07-Definition-Lists.md  08-Wiki-Links.md  09-Mermaid-Gallery.md  10-Images-and-Assets.md  11-Edge-Cases.md
samples/test-suite/Nested/: Sub-Recipe.md
samples/test-suite/formats/: 00-Formats-Index.md  gen-testdata.mjs  invalid.json  large.json  plain-only.eml  queries.rest  sample.eml  sample.http  sample.json  sample.txt  with-attachment.eml
scripts/: generate-icon.cjs  winget_local_test.py
src/: index.html  main.ts  styles.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  updater.json.disabled
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: email.rs  mod.rs  recipe_book.rs  watcher.rs
src/app/: app.component.ts  app.config.ts  app.routes.ts
src/app/core/: file-kind.ts  highlight-loader.ts  (+3 more)
winget/: CloudBrew.HopsMD.installer.yaml  CloudBrew.HopsMD.locale.en-US.yaml  CloudBrew.HopsMD.yaml
(+36 files in other folders)
