[package]
name = "hopsmd"
version = "1.1.0"
description = "HopsMD — local Markdown & Mermaid viewer (a CloudBrew side project)"
authors = ["Ludwig Biermann"]
edition = "2021"
rust-version = "1.78"

[lib]
name = "hopsmd_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = { version = "2", optional = true }
tauri-plugin-process = { version = "2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
notify-debouncer-full = "0.3"
mail-parser = "0.11"
msg_parser = "0.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
# Enable once an ed25519 keypair has been generated and the public key is
# pasted into tauri.conf.json — see docs/RELEASE.md. Builds without this
# feature ship without the in-app updater (winget upgrade still works).
updater = ["dep:tauri-plugin-updater", "dep:tauri-plugin-process"]
